move login outside of main layout and ensure proper spacing

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,1 +1,3 @@
-.pac-container{z-index:1300 !important}/*# sourceMappingURL=main.css.map */
+.pac-container {
+  z-index: 1300 !important;
+} /*# sourceMappingURL=main.css.map */
